--- a/assets/css/Reflex_training.css
+++ b/assets/css/Reflex_training.css
@@ -70,7 +70,6 @@ body {
     background: linear-gradient(-45deg, #FF1700, #FF0075, #23a6d5, #06FF00);
     background-size: 400% 400%;
     animation: gradient 6s ease infinite;
-    /* height: 100vh; */
 }
 
 @media only screen and (max-width: 340px) {
@@ -94,7 +93,6 @@ body {
 
 .container {
     color: #393E46;
-    /* display: none; */
     position: absolute;
     top: 20vh;
     left: 0;
@@ -121,7 +119,7 @@ body {
     height: 75vh;
     width: 98vw;
     border: 2px double rgb(188, 118, 118);
-    bottom: 5vw;
+    bottom: 1vw;
     left: 1vw;
 
 }
@@ -132,9 +130,9 @@ input[type=button] {
     border: none;
     border-radius: 10%;
     color: white;
-    padding: 30px 60px;
+    padding: 10px 20px;
     text-decoration: none;
-    margin: 4vh 2vh;
+    margin: 30px 20px;
     cursor: pointer;
 }
 
@@ -162,22 +160,28 @@ input[type=button] {
     text-align: center;
 }
 
+.stop_btn {
+    position: absolute;
+    top: 0vw;
+    left: 45vw;
+}
 
-.result {
-    transition: opacity 400ms;
+#result {
+    display: none;
+    border: 2px double rgb(147, 113, 113);
+    position: absolute;
+    padding: 2vw;
+    bottom: 30vh;
+    left: 37vw;
     text-align: center;
-    font-size: 5vh;
+    font-size: 3vh;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .target {
     display: none;
     cursor: pointer;
-    /* border: 2px solid red; */
-
-    /* display: none; */
     position: absolute;
-    /* border: 2px double white; */
     height: 3vw;
     width: 3vw;
     /* bounds of target */
@@ -189,5 +193,4 @@ input[type=button] {
     background-position: center center;
     background-size: cover;
     z-index: 2;
-    /* filter: invert(); */
 }
