Added reset password page and background image

--- a/assets/css/loginform.css
+++ b/assets/css/loginform.css
@@ -14,6 +14,8 @@ body {
     font-size: 18px;
     background: url(./background.jpg);
     background-size: cover;
+    background-image: url(../Images/loginbackgroundimage.jpg);
+    
 }
 
 .container {
