--- a/assets/css/meditation.css
+++ b/assets/css/meditation.css
@@ -1,69 +1,191 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-.app{
+  }
+  
+  .app {
     height: 100vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    font-family:Arial, Helvetica, sans-serif;
-} 
-.time,.sound,.player{
+    font-family: "Montserrat", sans-serif;
+  }
+  
+  .time, 
+  .sound {
     height: 80%;
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-}
-
-.player{
-   
-    position: relative;
-    
-}
-.player svg{
-  position:absolute;
-  height: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50% ,-50%);
-}
-video{
-    position: fixed;
-    top: 0%;
-    bottom: 0%;
-    width: 100%;
-    z-index: -2;
-}
-.timed{
-    position: absolute;
-    bottom: 10%;
-    color: aquamarine;
-    font-size: 50px;
-}
-.time button,
-.sound button{
-    color: aliceblue;
+  }
+  
+  .time button,
+  .sound button {
+    color: white;
     width: 30%;
     height: 10%;
     background: none;
     border: 2px solid white;
+    cursor: pointer;
     border-radius: 5px;
     font-size: 20px;
-    transition: all 0.3s ease-in-out;
-}
-.time button:hover{
+    transition: all 0.5s ease;
+  }
+  
+  .sound button {
+    border: none;
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    padding: 30px;
+  }
+  
+  .sound button img {
+    height: 100%
+  }
+  
+  .sound button:nth-child(1) {
+    background: #4972a1;
+  }
+  .sound button:nth-child(2) {
+    background: #a14f49;
+  }
+  
+  .time button:hover {
     color: black;
     background: white;
-}
-.sound button{
-    border: none;
-    height: 100%;
-    width: 120px;
-}
-.sound button img{
-    height: 100%;
-}
+  }
+  
+  .player {
+    position: relative;
+    height: 80%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    flex: 1;
+  }
+  
+  .player svg {
+    position: absolute;
+    height: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-90deg);
+    pointer-events: none;
+  }
+  .player svg circle {
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .timed {
+    position: absolute;
+    bottom: 10%;
+    color: white;
+    font-size: 50px;
+  }
+  
+  video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: -10;
+  }
+  
+  .play {
+    margin: auto;
+    position: relative;
+  }
+  .headerTitle {
+    position: fixed;
+    color: white;
+    top: 5%;
+    font-size: 50px;
+  }
+  
+  /* Responsiveness */
+  
+  /*
+  Tablet 
+  */
+  
+   @media only screen and (min-width: 768px) {
+    video {
+      max-height: auto;
+      width: auto;
+      display: block;
+    }
+  }
+  
+  /*
+  Mobile
+  */
+  
+  @media only screen and (max-width: 767px) {
+    .app {
+      height: 100%;
+    }
+  
+    .headerTitle {
+      font-size: 18px;
+    }
+  
+    video {
+      height: 100%;
+      width: auto;
+      display: block;
+    }
+    
+    .time {
+      position: fixed;
+      height: 50%;
+      bottom: 0;
+      left: 0%;
+      width: 50%;
+    }
+  
+    .time button {
+      width: 70%;
+      height: 20%;
+      color: white;
+      border: 1px solid white;
+    }
+  
+    .time button:hover {
+      background: white;
+      color: rgb(63, 63, 63);
+      border: 0px, solid white;
+      box-shadow: 0 0 10px rgb(141, 97, 97);
+    }
+  
+    .sound {
+      position: fixed;
+      height: 50%;
+      bottom: 0;
+      right: 0%;
+      width: 50%;
+    }
+  
+    .sound button {
+      transition: ease-in-out 0.4s;
+      box-shadow: 0 0 10px black;
+    }
+  
+    .player {
+      height: 50%;
+      position: fixed;
+      top: 0;
+    }
+  
+    .play {
+      height: 10%;
+    }
+  
+    .timed {
+      font-size: 20px;
+    }
+  }
