--- a/assets/css/confirmpassword.css
+++ b/assets/css/confirmpassword.css
@@ -1,19 +1,87 @@
 body
 {
-    background-color: pink;
+    margin:0;
+    padding: 0;
+    overflow: hidden;
+    background-image: url(../Images/Paaword-4.jpg);
+
+    background-size: 1560px 760px;
+    background-repeat: no-repeat;
+
+    
+}
+h2{
+    margin-top: 14px;
+    color: black;
+   font-size:20px;
+}
+
+.change{ 
+   
+    font-size: 12px;
+    color:black;
+    margin-top: -8px;
+}
+
+.container{
+    
+   color: black;
+    
+    background: white;
+    text-align: center;
+    margin-left: 608px;
+    margin-top: 112px;
+    width: 290px;
+    height: 490px;
+  
+    border: 3px black solid;
+    border-radius: 8%;
+    font-weight: bold;
+    
+    
+}
+.newupdate-1{
+    font-weight: bold;
+    margin-top: -15px;
+}
+.newupdate-2 {
+    font-weight: bold;
+    
+}
+#message{
+    font-size:13px;
+    color: red;
+}
+
+
+button{
+    background-color:green;
+    width: 70px;
+    height: 40px;
+    font-weight: bold;
+    cursor: pointer;
+    color: white;
+    margin: 3px;
+    border-radius: 6px;
+    
+    
+}
+button:hover{
+    background-color:lawngreen;
+    font-weight: bold;
+    
 }
 
 form
 {
-    margin: 10%;
+    margin: 4%;
 }
 
 form input
 {
-    margin: 4%;
+    margin: 10%;
+    border: 2px black solid;
+    
+   
 }
 
-button
-{
-    padding: 2%;
-}
