--- a/assets/css/myntraclone.css
+++ b/assets/css/myntraclone.css
@@ -143,12 +143,12 @@ nav {
 }
 
 footer {
-    margin-top: 25px;
+    /* margin-top: 25px; */
     height: 55px;
-    text-align: center;
+    /* text-align: center; */
     background-color: #f7f7f7;
     padding-top: 28px;
-    font-size: 17px;
+    font-size: 14px;
     color: #696b79;
     text-decoration: none;
     font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
@@ -198,3 +198,237 @@ footer a {
     cursor: pointer;
     letter-spacing: 0.5px;
 }
+
+.footer-container{
+    display: flex;
+    flex-direction: column;
+    background-color: #f7f7f7;
+    padding-left: 220px;
+    padding-right: 220px;
+}
+
+.row{
+    display: flex;
+    margin-bottom: 20px;
+}
+.online-shopping{
+    text-align: left;
+    margin-right: 50px;
+}
+.customer-policies{
+    text-align: left;
+    margin-right: 50px;
+}
+.app{
+    text-align: left;
+    margin-right: 90px;
+}
+.row-2{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    text-align: left;
+    
+}
+.content-heading{
+    color: black;
+    font-weight: 600;
+    letter-spacing: normal;
+}
+.content-box{
+    line-height: 1.6;
+}
+.para-content{
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+.copyright-container{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.horizontal-line{
+    margin-bottom: 30px;
+    opacity: 0.2;
+    height: 0.3px;
+}
+.office-address-content{
+    opacity: 0.9;
+    margin-bottom: 30px;
+}
+.other-info-heading{
+    font-weight: 600;
+    letter-spacing: normal;
+    color: black;
+    font-size: 15px;
+    opacity: 0.8;
+
+}
+.other-info-para-content{
+    margin-top: 8px;
+    margin-bottom: 30px;
+    font-size: 13px;
+    opacity: 0.8;
+}
+.Google-play{
+    background-repeat: none;
+    margin-right: 10px;
+    
+}
+.App-Store{
+    background-repeat: none;
+
+}
+.download-button{
+    display: flex;
+    margin-top: 30px;
+}
+.download-button img{
+    width: 130px;
+    height:40px;
+}
+
+.original{
+    margin-bottom: 30px;
+    color: black;
+    opacity: 0.8;
+
+}
+.customer-satisfaction{
+    margin-bottom: 30px;
+}
+.social-links{
+    margin-top: 12px;
+}
+
+.fb-icon{
+    margin-right:6px;
+}
+.tw-icon{
+    margin-right:6px;
+}
+.yt-icon{
+    margin-right:6px;
+}
+
+.men-section-items{
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    position: absolute; /* to be removed */
+    width: 1050px;
+    height: 510px;
+    /*top: 232px;  to be removed */
+    right: 1px;
+    left: 130px;
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-bottom: 15px;
+    z-index: 10;
+    font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+}
+
+.women-section-items{
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    position: absolute; /* to be removed */
+    width: 1050px;
+    height: 510px;
+    /*top: 232px;  to be removed */
+    right: 1px;
+    left: 130px;
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-bottom: 15px;
+    z-index: 10;
+    font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+}
+.kids-section-items{
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    position: absolute; /* to be removed */
+    width: 1050px;
+    height: 510px;
+    /*top: 232px;  to be removed */
+    right: 1px;
+    left: 130px;
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-bottom: 15px;
+    z-index: 10;
+    font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+}
+.home-section-items{
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    position: absolute; /* to be removed */
+    width: 1050px;
+    /*top: 232px;  to be removed */
+    right: 1px;
+    left: 130px;
+    height: 510px;
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-bottom:15px;
+    z-index: 10;
+    font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+}
+.beauty-section-items{
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    position: absolute; /* to be removed */
+    width: 1050px;
+    height:510px;
+    /*top: 232px;  to be removed */
+    right: 1px;
+    left: 130px;
+    padding-left: 45px;
+    padding-right: 45px;
+    padding-bottom: 15px;
+    z-index: 10;
+    font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+}
+
+.col-1{
+    margin-right: 70px;
+    margin-top: 15px;
+}
+.col-2{
+    margin-right: 70px;
+    margin-top: 15px;
+}
+.col-3{
+    margin-right: 70px;
+    margin-top: 15px;
+}
+.col-4{
+    margin-right: 70px;
+    margin-top: 15px;
+}
+.col-5{
+    margin-right: 70px;
+    margin-top: 15px;
+}
+.category{
+    margin-bottom: 11px;
+}
+.category-items{
+    margin-top: 8px;
+    line-height: 1.6;
+    font-size: 14px;
+    opacity: 0.95;
+}
+.horizontal-line2{
+    margin-bottom: 18px;
+    margin-top: 15px;
+    background-color: white;
+}
+.visibility{
+    display: none;
+}
+.category-heading{
+    color: #ee6780;
+    font-weight: bold;
+    font-size: 14px;
+}
+
