Added the remove button in each section and improved javascript logic while printing the resume

--- a/assets/css/resume_builder.css
+++ b/assets/css/resume_builder.css
@@ -120,12 +120,15 @@ button
 }
 #education
 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
+    /* display: grid; */
+    /* grid-template-columns: 1fr 1fr; */
+    /* grid-column-gap: 20px; */
+    /* grid-row-gap: 20px; */
 }
 
+.edublock{
+    margin-bottom: 10px;
+}
 .edublock .head
 {
     font-weight: 700;
