--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ html {
 }
 
 body.day {
-    background-color: whitesmoke;
+/*     background-color: whitesmoke; */
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
 }
 
 body.night {
@@ -94,7 +95,8 @@ body.night {
 
 body {
   overflow-x: hidden;
-  background-color: whitesmoke;
+/*   background-color: whitesmoke; */
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
 }
 /* day-night toggle button*/
 
